WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61719
FELightingNEON.h not compilable on arm
https://bugs.webkit.org/show_bug.cgi?id=61719
Summary
FELightingNEON.h not compilable on arm
Oleg Romashin (:romaxa)
Reported
2011-05-29 20:58:54 PDT
FELightingNEON.h:148 - ASSERT(m_lightSource.type == LS_DISTANT); - should be lightSource->type()
Attachments
Fix compilation with debug enabled
(1.34 KB, patch)
2011-05-29 21:03 PDT
,
Oleg Romashin (:romaxa)
no flags
Details
Formatted Diff
Diff
Fixed changelog
(1.39 KB, patch)
2011-05-30 10:30 PDT
,
Oleg Romashin (:romaxa)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Oleg Romashin (:romaxa)
Comment 1
2011-05-29 21:03:32 PDT
Created
attachment 95321
[details]
Fix compilation with debug enabled
WebKit Review Bot
Comment 2
2011-05-29 21:05:45 PDT
Attachment 95321
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Oleg Romashin (:romaxa)
Comment 3
2011-05-30 10:30:23 PDT
Created
attachment 95353
[details]
Fixed changelog
WebKit Commit Bot
Comment 4
2011-05-31 05:43:24 PDT
Comment on
attachment 95353
[details]
Fixed changelog Clearing flags on attachment: 95353 Committed
r87723
: <
http://trac.webkit.org/changeset/87723
>
WebKit Commit Bot
Comment 5
2011-05-31 05:43:28 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 6
2011-05-31 07:04:05 PDT
Revision
r87723
cherry-picked into qtwebkit-2.2 with commit 79b6bea <
http://gitorious.org/webkit/qtwebkit/commit/79b6bea
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug