2011-05-31  Oleg Romashin  <oleg.romashin@nokia.com>

Reviewed by Benjamin Poulain.

        Fix compilation with debug enabled, m_lightSource.type is not valid anymore
        https://bugs.webkit.org/show_bug.cgi?id=61719

        * platform/graphics/filters/arm/FELightingNEON.h:
        (WebCore::FELighting::platformApplyNeon):

Canonical link: https://commits.webkit.org/77203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87723 268f45cc-cd09-0410-ab3c-d52691b4dbfc